--- a/templates/manager.conf.erb
+++ b/templates/manager.conf.erb
@@ -7,6 +7,7 @@
 ;
 [general]
 enabled = <%= @manager_enable %>
+webenabled = <%= @manager_webenable %>
 port = <%= @manager_port %>
 bindaddr = <%= @manager_bindaddr %>
 
