--- a/templates/manager.conf.erb
+++ b/templates/manager.conf.erb
@@ -1,6 +1,6 @@
 ; THIS FILE IS MANAGED BY PUPPET
 ; all local modifications will be lost
-; To change values found in this file, see the $manager_enable, $manager_port
+; To change values found in this file, see the $manager_enable, $manager_webenable, $manager_port
 ; and $manager_bindaddr parameters of the asterisk module
 ;
 ; Asterisk Call Management support
