--- a/templates/snippet/followme.erb
+++ b/templates/snippet/followme.erb
@@ -1,6 +1,6 @@
 ; THIS FILE IS MANAGED BY PUPPET
 ; all local modifications will be lost
-[<%= @follwme_name %>]
+[<%= @name %>]
 music = <%= @music %>
 context = <%= @context %>
 <% @number.each { |nr| -%>
